# ansi_colle-server

./: .editorconfig  .gitignore  .nvim.lua  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  bootstrap.bash  bootstraph.bash  galaxy.yml  pyproject.toml  requirements.yml  taskfile.dist.yml
.github/workflows/: ansible.yml  changelog.yml  gh_pages.yml
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: major_changes.yaml
playbooks/: install.yml  site.yml  test.yml
roles/ansible/: README.md
roles/ansible/meta/: argument_specs.yml  main.yml
roles/ansible/tasks/: main.yml
roles/ansible/tests/: test_ansible.py
roles/auto_update/defaults/: main.yml
roles/auto_update/files/: 52unattended-upgrades-local
roles/auto_update/handlers/: main.yml
roles/auto_update/meta/: argument_specs.yml
roles/auto_update/tasks/: _debian.yml  _fedora.yml  _rhel.yml  main.yml
roles/base/files/: tmux.conf
roles/base/handlers/: main.yml
roles/base/meta/: argument_specs.yml  main.yml
roles/base/tasks/: main.yml
roles/cloudflared/defaults/: main.yml
roles/cloudflared/meta/: argument_specs.yml  main.yml
roles/cloudflared/tasks/: main.yml
roles/config/defaults/: main.yml
roles/config/meta/: main.yml
roles/config/tasks/: main.yml
roles/containers/files/: podman-auto-update.conf
roles/containers/meta/: argument_specs.yml  main.yml
roles/containers/tasks/: main.yml  (+1 more)
roles/dev/: README.md
roles/dev_env/: README.md
roles/jenkins/: README.md
roles/onlyoffice/: README.md
roles/podman/: README.md
roles/samba/: README.md
(+53 files in other folders)
