[project]
name = "ansi_colle-server"
version = "2.1.0"

description = "Namespace that stores Ansible collections."
readme = "README.md"
requires-python = ">=3.13"

dependencies = ["ansible>=12.0.0"]

[dependency-groups]
dev = [
  "ansible-dev-tools",
  "antsibull-docs",
  "git-cliff",
  "go-task-bin",
  "pre-commit",
  "ruff",
  "validate-pyproject",
]
